Style markdown column renderer

--- a/resources/assets/less/listview.less
+++ b/resources/assets/less/listview.less
@@ -84,6 +84,20 @@ body.sharp-list {
 
         }
 
+        .markdown-limit-renderer {
+          font-size:12px;
+
+          h1, h2, h3, h4 {
+            font-weight: bold;
+            margin:3px 0;
+            font-size:13px;
+          }
+
+          h1 {
+            font-size:15px;
+          }
+        }
+
       }
 
       .pagination {
