Add a download file link in file field

--- a/resources/assets/less/formfields/field-file.less
+++ b/resources/assets/less/formfields/field-file.less
@@ -104,6 +104,13 @@
             font-size: 8px;
           }
         }
+        
+        .dl {
+          position: absolute;
+          bottom: 5px;
+          right:5px;
+          font-size: 11px;
+        }
       }
     }
 
