--- a/resources/assets/less/contextbar.less
+++ b/resources/assets/less/contextbar.less
@@ -70,6 +70,11 @@
         color:#fff;
       }
 
+      .dropdown.open .dropdown-menu {
+        max-height:400px;
+        overflow: auto;
+      }
+
       .btn-ok {
         font-weight: bold;
       }
