Add customSearch field

--- a/resources/assets/less/main.less
+++ b/resources/assets/less/main.less
@@ -59,3 +59,4 @@ body.sharp-auth {
 @import "formfields/field-date.less";
 @import "formfields/field-ref.less";
 @import "formfields/field-embed.less";
+@import "formfields/field-customSearch";
