--- a/resources/assets/less/contextbar.less
+++ b/resources/assets/less/contextbar.less
@@ -2,10 +2,6 @@
   background: @sharp-contexbar-bg;
   padding-right: 0;
 
-  &.embedded {
-    background-color: desaturate(@sharp-contexbar-bg, 80%);
-  }
-
   .navbar {
     margin-bottom: 0;
 
@@ -47,7 +43,7 @@
         margin-right: 0;
       }
 
-      #search {
+      .search-field {
         max-width: 215px;
 
         input {
