--- a/resources/assets/less/formview.less
+++ b/resources/assets/less/formview.less
@@ -28,11 +28,20 @@ body.sharp-form {
     }
 
     .form-group:not(.has-error) .help-block {
-      color:#ACB2B7; font-style: italic;
+      color:#ACB2B7;
+      font-style: italic;
     }
 
     textarea {
       overflow: auto; resize: none;
+    }
+
+    .validation-error {
+      background-color:@brand-danger;
+      color:#fff;
+      display: inline-block;
+      margin-top:5px;
+      padding:1px 7px;
     }
   }
 
@@ -43,5 +52,17 @@ body.sharp-form {
       margin:auto;
       display: block;
     }
+  }
+  
+  #form-overlay {
+    background-color: #000;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
+    background-color: rgba(0,0,0,.4);
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 9999;
+    position: fixed;
   }
 }
