--- a/resources/assets/less/theme.less
+++ b/resources/assets/less/theme.less
@@ -1,3 +1,11 @@
 @sharp-navbar-bg: #2f353b;
 @sharp-navcol-bg: #acb2b7;
 @sharp-contexbar-bg: #12dbe8;
+
+.sweet-alert button {
+  background-color: @sharp-contexbar-bg !important;
+
+  &:hover, &:active {
+    background-color: darken(@sharp-contexbar-bg, 10%) !important;
+  }
+}
