Replace jquery ui by Dragula (for DnD)

--- a/resources/assets/less/listview.less
+++ b/resources/assets/less/listview.less
@@ -80,10 +80,6 @@ body.sharp-list {
           }
         }
 
-        &.reorder {
-
-        }
-
         .markdown-limit-renderer {
           font-size:12px;
 
@@ -125,5 +121,14 @@ body.sharp-list {
         display: none;
       }
     }
+  }
+
+  // Dragula styles
+  .gu-mirror {
+    display: none;
+  }
+  .gu-transit {
+    opacity: 1;
+    background-color: #d1c91f !important;
   }
 }
