--- a/resources/assets/less/main.less
+++ b/resources/assets/less/main.less
@@ -1,4 +1,5 @@
 @import "../bower_components/bootstrap/less/bootstrap.less";
+@import "../bower_components/bootstrap/less/mixins.less";
 @import "../bower_components/fontawesome/less/font-awesome.less";
 @import "bootstrap-variables.less";
 @import "theme.less";
