--- a/resources/assets/less/listview.less
+++ b/resources/assets/less/listview.less
@@ -129,6 +129,6 @@ body.sharp-list {
   }
   .gu-transit {
     opacity: 1;
-    background-color: #d1c91f !important;
+    background-color: lighten(@sharp-contexbar-bg, 35%) !important;
   }
 }
