--- a/resources/assets/sharp.css
+++ b/resources/assets/sharp.css
@@ -8844,7 +8844,7 @@ body.sharp-list .gu-mirror {
 }
 body.sharp-list .gu-transit {
   opacity: 1;
-  background-color: #d1c91f !important;
+  background-color: #b3f5f9 !important;
 }
 body.sharp-form #maincontent #page {
   margin-top: 10px;
