Commands full redesign

--- a/resources/assets/less/contextbar.less
+++ b/resources/assets/less/contextbar.less
@@ -1,6 +1,6 @@
 #maincontent #contextbar {
   background: @sharp-contexbar-bg;
-  padding-right: 0;
+  //padding-right: 0;
 
   .navbar {
     margin-bottom: 0;
@@ -20,7 +20,8 @@
         font-size: 18px;
         line-height:normal;
         color:#fff;
-        margin: 0;
+        margin-top: 0;
+        margin-bottom:0;
         padding-top:14px;
         padding-bottom: 14px;
         border-left:1px solid #fff;
