--- a/resources/assets/less/main.less
+++ b/resources/assets/less/main.less
@@ -45,6 +45,18 @@ body.sharp-auth {
   background: @sharp-navbar-bg;
 }
 
+.sharp-page-overlay {
+  background-color: #000;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
+  background-color: rgba(0,0,0,.4);
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 9999;
+  position: fixed;
+}
+
 @import "header.less";
 @import "navcol.less";
 @import "contextbar.less";
