Add command forms validation support

--- a/resources/assets/less/formview.less
+++ b/resources/assets/less/formview.less
@@ -17,40 +17,40 @@ body.sharp-form {
     }
   }
 
-  form {
-    .clearfix();
+  //#sharpdelete {
+  //  margin-top:60px;
+  //
+  //  button {
+  //    margin:auto;
+  //    display: block;
+  //  }
+  //}
+}
 
-    label.control-label {
-      font-weight: normal;
-      font-size: 14px;
-      text-transform: uppercase;
-      color:#666
-    }
+form {
+  .clearfix();
 
-    .form-group:not(.has-error) .help-block {
-      color:#ACB2B7;
-      font-style: italic;
-    }
-
-    textarea {
-      overflow: auto; resize: none;
-    }
-
-    .validation-error {
-      background-color:@brand-danger;
-      color:#fff;
-      display: inline-block;
-      margin-top:5px;
-      padding:1px 7px;
-    }
+  label.control-label {
+    font-weight: normal;
+    font-size: 14px;
+    text-transform: uppercase;
+    color:#666
   }
 
-  #sharpdelete {
-    margin-top:60px;
+  .form-group:not(.has-error) .help-block {
+    color:#ACB2B7;
+    font-style: italic;
+  }
 
-    button {
-      margin:auto;
-      display: block;
-    }
+  textarea {
+    overflow: auto; resize: none;
+  }
+
+  .validation-error {
+    background-color:@brand-danger;
+    color:#fff;
+    display: inline-block;
+    margin-top:5px;
+    padding:1px 7px;
   }
 }
