Fix general CSS layout (using flexbox)

--- a/resources/assets/less/contextbar.less
+++ b/resources/assets/less/contextbar.less
@@ -1,6 +1,6 @@
 #maincontent #contextbar {
+  padding:0 @grid-gutter-width/2;
   background: @sharp-contexbar-bg;
-  //padding-right: 0;
 
   .navbar {
     margin-bottom: 0;
