--- a/resources/assets/less/formview.less
+++ b/resources/assets/less/formview.less
@@ -1,6 +1,6 @@
 body.sharp-form {
-  #maincontent #page {
-    margin-top:@grid-gutter-width/2;
+  #page {
+    margin:@grid-gutter-width/2;
 
     .nav-pills {
       margin-bottom: @grid-gutter-width;
@@ -16,15 +16,6 @@ body.sharp-form {
       }
     }
   }
-
-  //#sharpdelete {
-  //  margin-top:60px;
-  //
-  //  button {
-  //    margin:auto;
-  //    display: block;
-  //  }
-  //}
 }
 
 form {
