--- a/resources/assets/less/contextbar.less
+++ b/resources/assets/less/contextbar.less
@@ -59,13 +59,21 @@
         }
       }
 
-      .dropdown.open .btn-sublist {
-        background: none;
-        border-top-color:transparent;
-        border-bottom-color:transparent;
-        border-right-color:transparent;
-        color:#fff;
+      .open>a,
+      .open>a:focus,
+      .open>a:hover {
+        border-top-color: transparent;
+        border-right-color: transparent;
+        border-bottom-color: transparent;
       }
+
+      //.dropdown.open .btn-sublist {
+      //  background: none;
+      //  border-top-color:transparent;
+      //  border-bottom-color:transparent;
+      //  border-right-color:transparent;
+      //  color:#fff;
+      //}
 
       .dropdown.open .dropdown-menu {
         max-height:400px;
