--- a/resources/assets/less/contextbar.less
+++ b/resources/assets/less/contextbar.less
@@ -67,13 +67,13 @@
         border-bottom-color: transparent;
       }
 
-      //.dropdown.open .btn-sublist {
-      //  background: none;
-      //  border-top-color:transparent;
-      //  border-bottom-color:transparent;
-      //  border-right-color:transparent;
-      //  color:#fff;
-      //}
+      .dropdown.open .btn-sublist {
+        background: none;
+        border-top-color:transparent;
+        border-bottom-color:transparent;
+        border-right-color:transparent;
+        color:#fff;
+      }
 
       .dropdown.open .dropdown-menu {
         max-height:400px;
