Handle view commands

--- a/resources/assets/less/listview.less
+++ b/resources/assets/less/listview.less
@@ -127,3 +127,15 @@ body.sharp-list {
     background-color: lighten(@sharp-contexbar-bg, 35%) !important;
   }
 }
+
+#command_view_panel {
+  background: #fff;
+  height:100vh;
+  width:98vw;
+  position: fixed;
+  left:110vw;
+  top:0;
+  z-index:9999;
+  box-shadow: 0 0 10px #333;
+  overflow: auto;
+}
