--- a/resources/assets/less/main.less
+++ b/resources/assets/less/main.less
@@ -58,6 +58,13 @@ body.sharp-auth {
   bottom: 0;
   z-index: 9998;
   position: fixed;
+  text-align: center;
+
+  i {
+    color: #fff;
+    margin-top: 30%;
+    font-size: 140px;
+  }
 }
 
 @import "header.less";
