Some file progressbar styling

--- a/resources/assets/less/formfields/field-file.less
+++ b/resources/assets/less/formfields/field-file.less
@@ -27,18 +27,15 @@
     }
 
     .dz-progress {
+      background: #dddddd;
       position: absolute;
       bottom:-1px;
       left:-1px;
       right:-1px;
 
       .dz-upload {
-        height:20px;
-        line-height: 20px;
-        color:#333;
-        text-align: center;
         background: @sharp-contexbar-bg;
-        display: block;
+        height:10px;
       }
     }
 
@@ -58,93 +55,3 @@
   }
 
 }
-
-//.crop-img-glasspane {
-//  display: none;
-//  position: fixed;
-//  width: 100%;
-//  height: 100%;
-//  margin: 0;
-//  padding: 0;
-//  top: 0;
-//  left: 0;
-//  background: #000;
-//  opacity: .6;
-//  z-index: 9998;
-//}
-//
-//.crop-img-wrapper {
-//  display: none;
-//  z-index: 9999;
-//  position: fixed;
-//  top: 50%;
-//  left: 50%;
-//  width: 450px;
-//  padding:20px;
-//  margin-left: -225px;
-//  margin-top: -225px;
-//  background: #fff;
-//
-//  img {
-//    display: block;
-//    margin:20px auto;
-//  }
-//
-//  a.btn {
-//    float:right;
-//
-//    &.btn-crop:hover {
-//      color:desaturate(@sharp-contexbar-bg, 50%);
-//    }
-//
-//    &.btn-cancel:hover {
-//      color:red;
-//    }
-//
-//    &.btn-back:hover {
-//      color:#000;
-//    }
-//  }
-//}
-//
-///*
-// * imgAreaSelect default style
-// */
-//
-//.imgareaselect-border1 {
-//  background: url(border-v.gif) repeat-y left top;
-//}
-//
-//.imgareaselect-border2 {
-//  background: url(border-h.gif) repeat-x left top;
-//}
-//
-//.imgareaselect-border3 {
-//  background: url(border-v.gif) repeat-y right top;
-//}
-//
-//.imgareaselect-border4 {
-//  background: url(border-h.gif) repeat-x left bottom;
-//}
-//
-//.imgareaselect-border1, .imgareaselect-border2,
-//.imgareaselect-border3, .imgareaselect-border4 {
-//  filter: alpha(opacity=50);
-//  opacity: 0.5;
-//}
-//
-//.imgareaselect-handle {
-//  background-color: #fff;
-//  border: solid 1px #000;
-//  filter: alpha(opacity=50);
-//  opacity: 0.5;
-//}
-//
-//.imgareaselect-outer {
-//  background-color: #000;
-//  filter: alpha(opacity=50);
-//  opacity: 0.5;
-//}
-//
-//.imgareaselect-selection {
-//}
