form input styling

--- a/resources/assets/less/formview.less
+++ b/resources/assets/less/formview.less
@@ -44,4 +44,9 @@ form {
     margin-top:5px;
     padding:1px 7px;
   }
+
+  .form-control:focus {
+    box-shadow:none;
+    border-color:@sharp-contexbar-bg;
+  }
 }
