Add "formfield" functionality

--- a/resources/assets/less/formview.less
+++ b/resources/assets/less/formview.less
@@ -49,4 +49,22 @@ form {
     box-shadow:none;
     border-color:@sharp-contexbar-bg;
   }
+
+  .panel {
+    box-shadow:none;
+    border:none;
+    background: none;
+
+    .panel-heading {
+      background: none;
+      border:none;
+      padding:0;
+    }
+
+    .panel-body {
+      border:1px solid #dadada;
+      background:#e0e0e0;
+      padding:10px;
+    }
+  }
 }
